# video-downloader

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cli/: main.py
src/downloader/: __init__.py  agent.py  config.py  downloader.py  llm.py  validator.py  ytdlp.py
