[project]
name = "video-loader"
version = "1.0.0"
description = "CLI tool for downloading videos from URLs with yt-dlp and Playwright MCP fallback"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "pydantic-settings>=2.0",
    "yt-dlp>=2024.0",
    "can_ada>=1.0",
    "litellm>=1.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
video-loader = "cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "cli*"]
